add basic themes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
 				<span class="number _6">6</span>
 				<span class="number _9">9</span>
 			</div>
+			<div class="config">
+				<img src="http://findicons.com/files/icons/1684/ravenna/256/settings.png">
+				<div class="submenu">
+					<ul>
+						<li theme="1" class="active">Clock 1</li>
+						<li theme="2">Clock 2</li>
+						<li theme="3">Clock 3</li>
+						<li theme="4">Clock 4</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 
