add basic change size clock

--- a/index.html
+++ b/index.html
@@ -42,14 +42,28 @@
 				<span class="number _9">9</span>
 			</div>
 			<div class="config">
-				<img src="http://findicons.com/files/icons/1684/ravenna/256/settings.png">
-				<div class="submenu">
-					<ul>
-						<li theme="1" class="active">Clock 1</li>
-						<li theme="2">Clock 2</li>
-						<li theme="3">Clock 3</li>
-						<li theme="4">Clock 4</li>
-					</ul>
+				<div class="item">
+					<img src="http://findicons.com/files/icons/1684/ravenna/256/settings.png">
+					<div class="submenu">
+						<ul class="theme">
+							<li class="header">Change Clock</li>
+							<li theme="1" class="active">Clock 1</li>
+							<li theme="2">Clock 2</li>
+							<li theme="3">Clock 3</li>
+							<li theme="4">Clock 4</li>
+						</ul>
+					</div>
+				</div>
+				<div class="item">
+					<img src="http://cdn.1001freedownloads.com/icon/thumb/873/maximize-512.png">
+					<div class="submenu">
+						<ul class="size">
+							<li class="header">Size Clock</li>
+							<li class="size" size="small">Small</li>
+							<li class="size active" size="medium">Medium</li>
+							<li class="size" size="big">Big</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
