changes to themes

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 					<div class="submenu">
 						<ul class="theme">
 							<li class="header">Change Clock</li>
-							<li theme="1" class="active">Clock 1</li>
-							<li theme="2">Clock 2</li>
-							<li theme="3">Clock 3</li>
-							<li theme="4">Clock 4</li>
+							<li theme="1" class="active">Radioactive</li>
+							<li theme="2">Node JS</li>
+							<li theme="3">Classic</li>
+							<li theme="4">HTML</li>
 						</ul>
 					</div>
 				</div>
