--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 	<!-- Page Title -->
 	<title>Interactive Clock</title>
