--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<!-- Stylesheets Lybraries -->
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css?ver=vxr67">
 
+	<!-- Favicon -->
+	<link rel="icon" type="image/png" href="img/favicon.png" id="favicon">
+
 </head>
 <body class="">
 	<div class="current_date">
