--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
 		</div>
 	</div>
 
+	<div class="loader">
+		<div class="porcentage">
+			<span>0%</span>
+		</div>
+	</div>
+
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
