add popup help and event key for shrtcuts

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 						</ul>
 					</div>
 				</div>
+				<div class="item help">
+					<img src="http://careerfair.rpi.edu//CF3/images/help.png">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -91,6 +94,33 @@
 		<div class="porcentage">
 			<span>0%</span>
 		</div>
+	</div>
+
+	<div class="popup help">
+		<span class="close">X</span>
+		<h1 class="title">Keyboard Shorcuts</h1>
+		<ul class="themes">
+			<li class="header">Themes Clock</li>
+			<li><em> numpad '1'</em> <span>Theme Radiactive</span> </li>
+			<li><em> numpad '2'</em> <span>Theme Node JS</span> </li>
+			<li><em> numpad '3'</em> <span>Theme Classic</span> </li>
+			<li><em> numpad '4'</em> <span>Theme HTML</span> </li>
+		</ul>
+		<ul class="sizes">
+			<li class="header">Size Clock</li>
+			<li><em> letter 'shift + a'</em> <span>Small</span> </li>
+			<li><em> letter 'shift + m'</em> <span>Medium</span> </li>
+			<li><em> letter 'shift + b'</em> <span>Big</span> </li>
+		</ul>
+		<ul class="language">
+			<li class="header"><span>Language</span></li>
+			<li><em> letter 'e'</em> <span>English</span> </li>
+			<li><em> letter 's'</em> <span>Spanish</span> </li>
+		</ul>
+		<ul class="help">
+			<li class="header">Help</li>
+			<li><em> letter 'h'</em> <span>Keyboard Shorcuts</span> </li>
+		</ul>
 	</div>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
