--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
 		</ul>
 	</div>
 
+	<a href="../" class="back_button">
+		<img src="img/back.png">
+		<div class="message">Back</div>
+	</a>
+
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
