add button back

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 	<!-- Page Title -->
-	<title>Interactive Clock</title>
+	<title>Interactive Clock - dmsanchez86</title>
 
 	<!-- Stylesheets Lybraries -->
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css?ver=vxr67">
