--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name="author" content="Daniel Mauricio Sanchez Avila" />
+	<meta name="keywords" content="daniel,mauricio,dmsanchez86,daniel mauricio,daniel mauricio sanchez,portfolio,interactive clock css, interactive clock css3, interactive clock, reloj interactivo con css3, reloj interactivo css, reloj css3, reloj css," />
+	<meta name="description" content="Daniel Mauricio Interactive Clock, made in css3 and JavaScript..." />
+	<meta name="Resource-type" content="Document" />
+	<meta name="Revisit-after" content="2 days" />
+	<meta name="robots" content="ALL" />
 
 	<!-- Page Title -->
 	<title>Interactive Clock - dmsanchez86</title>
@@ -54,7 +60,7 @@
 					<img src="img/settings.png">
 					<div class="submenu">
 						<ul class="theme">
-							<li class="header">Change Clock</li>
+							<li class="header">Theme</li>
 							<li theme="1" class="active">Radioactive</li>
 							<li theme="2">Node JS</li>
 							<li theme="3">Classic</li>
@@ -66,7 +72,7 @@
 					<img src="img/size.png">
 					<div class="submenu">
 						<ul class="size">
-							<li class="header">Size Clock</li>
+							<li class="header">Size</li>
 							<li class="size" size="small">Small</li>
 							<li class="size active" size="medium">Medium</li>
 							<li class="size" size="big">Big</li>
@@ -108,9 +114,11 @@
 		</ul>
 		<ul class="sizes">
 			<li class="header">Size Clock</li>
-			<li><em> letter 'shift + a'</em> <span>Small</span> </li>
-			<li><em> letter 'shift + m'</em> <span>Medium</span> </li>
-			<li><em> letter 'shift + b'</em> <span>Big</span> </li>
+			<li><em> Combination letters 'shift + a'</em> <span>Small</span> </li>
+			<li><em> Combination letters 'shift + m'</em> <span>Medium</span> </li>
+			<li><em> Combination letters 'shift + b'</em> <span>Big</span> </li>
+
+
 		</ul>
 		<ul class="language">
 			<li class="header"><span>Language</span></li>
@@ -130,5 +138,13 @@
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  ga('create', 'UA-62994212-3', 'auto');
+	  ga('send', 'pageview');
+	</script>
 </body>
 </html>
